[package]
name = "rangeinfo"
version = "0.1.1"
authors = ["hjiayz <hjiayz@hotmail.com>"]
exclude = ["build/**/*.o", "doc/**/*.html"]
repository = "https://github.com/hjiayz/rangeinfo"
keywords = ["range"]
license = "Apache-2.0"
description = "get info from any range struct."
readme = "README.MD"
[dependencies]
